--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -66,8 +66,8 @@ heading_anchors: true
 aux_links:
   "IDE":
     - "https://compiler.pythonhub.org"
-  "GitHub":
-    - "//github.com/pythonhub-org/python-projects"
+  "Subscribe":
+    - "https://subscribe.pythonhub.org"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
